<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.cherry.timetable.MainFragment"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:id="@+id/main_Layout"
        android:layout_width="329dp"
        android:layout_height="390dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491">

        <TableRow
            android:id="@+id/row_Labels"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_Period"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/period"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/label_Subject"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:gravity="center_vertical"
                android:text="@string/sub"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/label_Room"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:gravity="center_vertical"
                android:text="@string/room"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>


        <TableRow
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/number_1"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_1"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_2"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_2"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_3"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_3"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_4"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_4"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_5"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_5"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_6"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_6"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_7"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_sub_7"
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_room_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/none"
                android:textAlignment="center"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
